--- a/Gb-file.html
+++ b/Gb-file.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-width=1.0">
         <title>Best Day Scheduler</title>
-        <link rel="stylesheet" href="list.css">
+        <link rel="stylesheet" href="animated-GB.css">
     </head>
     <body>
         <header>
